Fixed flickering modal

--- a/client/src/stylesheets/related_outfits/CompareModal.css
+++ b/client/src/stylesheets/related_outfits/CompareModal.css
@@ -1,8 +1,10 @@
 body.show-modal {
   overflow-y: hidden;
+
 }
 
-.c-compare-modal, .c-overlay {
+.c-overlay, .c-compare-modal {
+  pointer-events: none;
   width: 100vw;
   height: 100vh;
   z-index: 11;
@@ -22,13 +24,6 @@ table {
 }
 td, tr {
   border-bottom: 1px solid black;
-}
-
-.c-close-compare {
-  justify-self: end;
-  margin: -10px 5px;
-  position: absolute;
-  /* margin-right: 4px; */
 }
 
 th {
@@ -63,23 +58,30 @@ thead th:nth-child(3) {
   font-weight: 900;
 }
 
-.c-compare-modal-table {
+ .c-modal-container {
   position: absolute;
   z-index: 11;
-  top: 40%;
   left: 50%;
+  top: 50%;
   transform: translate(-50%, -50%);
   line-height: 1.4;
   background: #f1f1f1;
   padding: 14px 28px;
   border-radius: 3px;
-  width: 500px;
-  /* min-width: 300px; */
+  width: 65vw;
+  display: grid;
+}
+.c-close-compare {
+  justify-self: end;
+  text-align: end;
+  margin: 10px 14px 0 0;
+  position: absolute;
+}
+.c-compare-modal-table {
+  height: 100%;
+  width: 100%;
 }
 
 .close-modal {
   position: absolute;
-  top: 10px;
-  right: 10px;
-  padding: 5px 7px;
 }
